# tic-tac-toe

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
docs/: board.html  game.js  index.html  main.css  menace.js  minimax.js
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/: test_game.py
tests/utils/: test_permutations.py  test_plot.py  test_ternary.py
tic_tac_toe/: decision_tree.py  game.py  menace.py  minimax.py  reinforcement_learning.py
tic_tac_toe/utils/: __init__.py  permutations.py  plot.py  ternary.py
