[tool.poetry]
name = "tic_tac_toe"
version = "0.1.0"
description = ""
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
